Figured out that an extra space is what was causing the bug in my add meal feature. Eliminated the extra white space in data.json

--- a/static/css/foodapp_style.css
+++ b/static/css/foodapp_style.css
@@ -349,7 +349,7 @@ H3.instructions{
 /*------------------- GET A MEAL PAGE STYLING --------------------*/
 .meal-item {
   width: 16em;
-  height: 16em;
+  height: 10em;
   margin: 2em;
   display: inline-block;
 }
